// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChopLogicLoader > Arrow should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-Qotzb hAPRct loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Brackets should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-fYsHOw kapOBr loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Circle should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-dKREkF jlGYwB loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Dots should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-fWnslK hmevLQ loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Filler should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-dIMoHT kdjGnh loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Linear should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-iQQCXo dKNlgq loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Pulse should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-gDpztx bbDTYP loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Rotation should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-kpOvIu bdRyTi loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;

exports[`ChopLogicLoader > Square should match the snapshot 1`] = `
<DocumentFragment>
  <span
    class="sc-icnseD jrpWri loader-class"
    id="loader-id"
    style="color: red;"
    tabindex="0"
    title="Test loader"
  />
</DocumentFragment>
`;
